repo api consumed

--- a/Frontend/portfolio project/css/portfolio.css
+++ b/Frontend/portfolio project/css/portfolio.css
@@ -32,3 +32,23 @@ html{
 h1{
     font-size: 160%;
 }
+.repos{
+    display:flex;
+    margin:1rem 1rem;
+    font-size: 160%;
+    flex-flow: row wrap;
+}
+.repos .repo{
+    flex:1;
+    margin:1rem 0.5rem;
+    padding:0.7rem 2rem;
+    min-width:30rem;
+    max-width:65rem;
+    display:inline-block;
+    border:0.5px solid lightskyblue;
+    border-radius:1rem;
+    line-height:150%;
+}
+.repos .repo .name{
+    text-align: center;
+}
