--- a/Frontend/portfolio project/css/portfolio.css
+++ b/Frontend/portfolio project/css/portfolio.css
@@ -1,12 +1,9 @@
-html{
-    font-size:62.5%;
-}
 *{
-    font-size: 1.6rem;
     margin:0;
     padding:0;
-    box-sizing: border-box;
+    box-sizing:border-box;
 }
+
 #laoding{
     margin:auto auto;
     width:20rem;
@@ -21,8 +18,8 @@ html{
     left:50%;
     transform:translate(-50%,-50%);
 }
-.header *{
-    margin:0.3rem;
+html{
+    font-size:62.5%;
 }
 .header{
     font-size:1.9rem;
@@ -41,8 +38,7 @@ figure{
     padding:0px;
 }
 #profile{
-    max-width:70vw;
-    height:35rem;
+    height:30rem;
     border-radius:50%;
 }
 .header h1{
@@ -89,7 +85,7 @@ form{
     flex:1;
     margin:1rem 0.5rem;
     padding:0.7rem 2rem;
-    min-width:45%;
+    min-width:49.5%;
     width:45%;
     max-width:95vh;
     margin-left:0px;
@@ -114,4 +110,6 @@ form{
     background-color: #333;
     color:#eee; 
     padding:1rem;
+    margin: 0px 0px;
+    font-size: 2rem;
 }
